Fix popup overflow hidden issue

--- a/components/product-stack/product-stack.less
+++ b/components/product-stack/product-stack.less
@@ -148,6 +148,13 @@
         }
         .price {
             float: right!important;
+            //clear-after: both;
+        }
+        .price-discount-popup {
+            content: ".";
+            display: block;
+            height: 20px;
+            clear: both;
         }
         .well {
             min-height: 20px;
